hphp/test/zend/good/Zend/tests/class_alias_008.php.expectf

Fatal error: Cannot instantiate abstract class foo in %s/class_alias_008.php on line 9
